--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "~3.3.4",
     "mongoose": "^3.8.8",
-    "ejs": "^1.0.0"
+    "ejs": "^1.0.0",
+    "async": "0.9.0"
   },
   "devDependencies": {
     "colors": "^0.6.2",
