--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "express": "~3.3.4",
     "mongoose": "^3.8.8",
     "ejs": "^1.0.0",
-    "async": "0.9.0"
+    "async": "0.9.0",
+    "colors": "^0.6.2",
+    "faker": "^1.0.0"
   },
   "devDependencies": {
-    "colors": "^0.6.2",
-    "faker": "^1.0.0",
     "grunt": "~0.4.1",
     "grunt-contrib-compass": "^0.8.0",
     "grunt-contrib-sass": "^0.7.3",
