--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "app.js"
   },
   "dependencies": {
-    "express": "~3.3.4",
-    "mongoose": "^3.8.8",
-    "ejs": "^1.0.0",
     "async": "0.9.0",
     "colors": "^0.6.2",
-    "faker": "^1.0.0"
+    "ejs": "^1.0.0",
+    "express": "~3.3.4",
+    "faker": "^1.0.0",
+    "mongoose": "^3.8.8",
+    "randomcolor": "^0.1.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
